src/styles/modules/Index.module.scss
@import '@styles/mediaQuery';

.button-block {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	gap: 0.25rem;
}

.container {
	display: flex;
	flex-wrap: wrap;
	place-items: center;
	margin: 0 auto;

	@include breakpoint-range($from: mobile, $to: desktopSmall) {
		flex-direction: column;
	}

	@include breakpoint-range($from: desktopSmall, $to: desktopLarge) {
		flex-direction: row;
	}

	@include breakpoint-range($from: desktopSmall) {
		padding: 0.5rem 3rem;
	}
}

.section {
	width: fit-content;
	display: flex;
	flex-direction: column;
	flex-wrap: wrap;
	place-items: center;
	margin: 0 auto;
}

.cta {
	@extend .section;
	position: absolute;
	

	.text {
		padding: var(--paddingContainer);
		border-radius: var(--borderRadius);
		font-weight: 300;
		max-width: 30rem;
		text-align: center;
		color: var(--primary);

		& p {
			line-height: 1.2;
			font-size: 1.4rem;
			margin-top: 2rem;
		}
	}

	@include breakpoint-range($from: mobile) {
		bottom: 0;
		left: 0;
		background: var(--backgroundColor);
		border-radius: var(--borderRadius);
		min-height: 100%;
		width: 100%;
	}

	@include breakpoint-range($from: tablet) {
		bottom: 1%;
		left: 20%;
		background: transparent;
		width: fit-content;
		min-height: 70%;
		
	}

	@include breakpoint-range($from: desktopSmall) {
		bottom: 20%;
		left: 12%;
		min-height: 10%;
	}
}

.model {
	width: 100vw;
	height: 95vh;
	display: flex;
	position: absolute;
	bottom: 2%;
	right: 0%;
	margin: auto;

	@include breakpoint-range($from: mobile, $to: desktopSmall) {
	 & #hero-model {
			display: none;
		}
	}

	@include breakpoint-range($from: desktopSmall) {
		& #hero-model {
			display: block;
		}

		padding: 0.5rem 3rem;
		flex-direction: row;
	}
}

